--- a/.github/workflows/rename_file.yml
+++ b/.github/workflows/rename_file.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - test_renaming
 jobs:
-  my-job:
+  rename_job:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
